[package]
name = "vinylla"
version = "0.0.0"
authors = ["Jan Holthuis <jan.holthuis@ruhr-uni-bochum.de>"]
edition = "2018"
repository = "https://github.com/Holzhaus/vinylla.git"
homepage = "https://github.com/Holzhaus/vinylla.git"
license = "LGPL-3.0+"
readme = "README.md"
description = "Rust library for working with timecode vinyl/CD audio for DVS systems."
keywords = ["vinyl", "control", "timecode", "dvs", "scratch"]
categories = [
    "multimedia::audio",
]
documentation = "https://docs.rs/vinylla/"

[dependencies]

[dev-dependencies]
hound = "3.4"
sdl2 = "0.37"
